--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -45,53 +45,12 @@
 
     <div class="col-sm-3">
       <h3>Now you're here, How do you like Frankly?</h3>
-      <div class="card bg-primary" style="max-width: 100%">
-        <div class="row no-gutters">
-            
-            <div>
-                <div class="card-body">
-                  <h1 class="d-inline"><i class="bi bi-emoji-heart-eyes"></i></h1><h5 class="card-title d-inline"> I'm loving Frankly</h5>
-  
-                  <div class="text-center">
-                      <img class="card-img-top bg-secondary" src="{{ url_for('static',filename='qrcodes/User_23_promotor.png')}}" style="max-width: 50%" alt="Card image cap">
-                    </div>
-                </div>    
-                </div>
-            </div>
-        </div>
+<div class="btn-group" role="group" aria-label="Basic example">
 
-        <div class="card bg-secondary" style="max-width: 100%">
-        <div class="row no-gutters">
-            
-            <div>
-                <div class="card-body">
-                    <h1 class="d-inline"><i class="bi bi-emoji-expressionless"></i></h1><h5 class="card-title d-inline"> Could be better</h5>
-                    
-                    <div class="text-center">
-                      <img class="card-img-top bg-secondary" src="{{ url_for('static',filename='qrcodes/User_23_promotor.png')}}" style="max-width: 50%" alt="Card image cap">
-                    </div>
-                </div>    
-                </div>
-            </div>
-        </div>
-
-
-        <div class="card bg-third" style="max-width: 100%">
-          <div class="row no-gutters">
-              
-              <div>
-                  <div class="card-body">
-                      
-                      <h1 class="d-inline"><i class="bi bi-emoji-frown"></i></h1><h5 class="card-title d-inline"> Not so good</h5>
-                      <div class="text-center">
-                        <img class="card-img-top bg-secondary" src="{{ url_for('static',filename='qrcodes/User_23_promotor.png')}}" style="max-width: 50%" alt="Card image cap">
-                      </div>
-                  </div>    
-                  </div>
-                  
-              </div>
-          </div>
-
+      <a class="btn btn-secondary text-dark" href="https://franklyapp.nl/send-feedback/23/3" role="button"> 😃<br> it’s great!</a><br>
+      <a class="btn btn-secondary text-dark" href="https://franklyapp.nl/send-feedback/23/2" role="button"> 😐<br> it’s ok</a><br>
+      <a class="btn btn-secondary text-dark" href="https://franklyapp.nl/send-feedback/23/1" role="button"> 🙄<br> it’s lacking</a>
+</div>
         
       </div>
     </div>
