--- a/website/templates/theme.html
+++ b/website/templates/theme.html
@@ -96,7 +96,7 @@
                  {% if user.is_authenticated %}
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/logout"><i class="bi bi-box-arrow-left"></i> Log Out</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/dashboard/{{user.username}}"><i class="bi bi-speedometer"></i> Dashboard</a></li>
-                        <li class="nav-item mx-0 mx-lg-1" ><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" data-bs-toggle="modal" data-bs-target="#staticBackdrop"> <i class="bi bi-sliders"></i> Settings</a></li>
+                        <li class="nav-item mx-0 mx-lg-1" ><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" data-bs-toggle="modal" data-bs-target="#exampleModal"> <i class="bi bi-sliders"></i> Settings</a></li>
 
 
                         
