added generic QR Code

--- a/website/templates/emailtemplates/feedbacktemplate.html
+++ b/website/templates/emailtemplates/feedbacktemplate.html
@@ -358,7 +358,7 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="{{promotorURL}}" target="_blank">😃 great!</a> </td>
+                                      <td> <a href="{{promotorURL}}" target="_blank">😃 it’s great!</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -374,7 +374,7 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="{{neutralURL}}" target="_blank">😑 mehh!</a> </td>
+                                      <td> <a href="{{neutralURL}}" target="_blank">😐 it’s ok</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -390,7 +390,7 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="{{detractorURL}}" target="_blank">😢 Not so good</a> </td>
+                                      <td> <a href="{{detractorURL}}" target="_blank">🙄 it’s lacking</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
