--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -954,7 +954,7 @@
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-    <button class="btn btn-primary text-dark" onclick="myFunction()"><i class="bi bi-share"></i><br> Copy link</button>
+    <button class="btn btn-primary text-dark" onclick="myFunction()"><i class="bi bi-clipboard-check"></i><br> Copy link</button>
     <script>
       function myFunction() {
           /* Get the text field */
