--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -1,7 +1,8 @@
 
 {% extends "theme.html" %} {% block title %}Frankly - Giving Feedback made easy{% endblock %} 
 
-
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 {% block Content %}
 
 <!-- Button trigger modal -->
@@ -281,7 +282,140 @@
 
 
 
-<!--HERE WE Start THE CAROUSEL -->
+<!--Here WE Start THE CAROUSEL -->
+<!-- This javascript is used to controll the carousel-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+<!-- CSS only -->
+<!-- Styling specific to carousel-->
+{% if totalresponses  > 0 %}
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+      .b-example-divider {
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
+
+      .b-example-vr {
+        flex-shrink: 0;
+        width: 1.5rem;
+        height: 100vh;
+      }
+
+      .bi {
+        vertical-align: -.125em;
+        fill: currentColor;
+      }
+
+      .nav-scroller {
+        position: relative;
+        z-index: 2;
+        height: 2.75rem;
+        overflow-y: hidden;
+      }
+
+      .nav-scroller .nav {
+        display: flex;
+        flex-wrap: nowrap;
+        padding-bottom: 1rem;
+        margin-top: -1px;
+        overflow-x: auto;
+        text-align: center;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+      }
+    </style>
+
+    
+    <!-- Custom styles for this template -->
+    <link href="carousel.css" rel="stylesheet">
+
+
+
+  <div id="myCarousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    </div>
+    <div class="carousel-inner" width="100%" >
+
+      <div class="carousel-item active">
+        <div class="bg-light text-dark">
+          <br><br>
+          <h5>Users per category</h5>
+          <canvas id="lineChart" width="900" height="200"></canvas>
+          
+        </div>
+
+      </div>
+      <div class="carousel-item">
+        <div class="bg-light text-dark">
+          <br><br>
+          <div class="container">
+            <div class="row align-items-start">
+              <h4>Words your users use:</h4>
+              <div class="col">
+                <h5>Happy users</h5>
+                <canvas id="lineChartWords" width="300" height="200"></canvas>
+              </div>
+              <div class="col">
+                <h5>Unhappy users</h5>
+                <canvas id="lineChartWordsNegative" width="300" height="200"></canvas>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+
+      </div>
+
+      <div class="carousel-item" width="100%">
+        <div class="bg-light text-dark">
+          <br><br>
+          <h5>This is when your responses came in</h5>
+          <canvas id="lineChartDates" ></canvas>
+          
+      </div>
+    </div>
+
+    <div class="carousel-item">
+        <div class="bg-light text-dark">
+          <br><br>
+          <h4>How your users are distributed</h4>
+          <canvas id="pieChart" width="900" height="200"></canvas>
+          
+      </div>
+    </div>
+
+
+    <button class="carousel-control-prev text-dark" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon text-dark" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next text-dark" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon text-dark" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
 
 
 <!--HERE WE END THE CAROUSEL -->
@@ -293,9 +427,7 @@
 
 
     <!--Drawing the bar chart-->
-    {% if totalresponses  > 0 %}
 
-    <canvas id="lineChart" width="900" height="200"></canvas>
     <script>
       var ctx = document.getElementById("lineChart").getContext("2d");
       var lineChart = new Chart(ctx, {
@@ -342,10 +474,7 @@
   
   <div class="col-sm-4">
 <!--Commonly used words-->
-<h4>Words your users use:</h4>
-<p>Here are the top 10 most frequently used words in your responses</p>
-<h5>These are words your happy users use</h5>
-    <canvas id="lineChartWords" width="300" height="200"></canvas>
+
   <script>
     var ctx = document.getElementById("lineChartWords").getContext("2d");
     var lineChartWords = new Chart(ctx, {
@@ -376,9 +505,7 @@
           text: 'Commonly used words' } }
     });
   </script>
-<br>
-<h5>These are words your unhappy users use</h5>
-<canvas id="lineChartWordsNegative" width="300" height="200"></canvas>
+
   <script>
     var ctx = document.getElementById("lineChartWordsNegative").getContext("2d");
     var lineChartWords = new Chart(ctx, {
@@ -409,10 +536,8 @@
           text: 'Commonly used words' } }
     });
   </script>
-<br>
 
-<h5>This is when your responses came in</h5>
-<canvas id="lineChartDates" width="300" height="200"></canvas>
+
   <script>
     var ctx = document.getElementById("lineChartDates").getContext("2d");
     var lineChartDates = new Chart(ctx, {
@@ -446,14 +571,12 @@
           text: 'When did your responses came in' } }
     });
   </script>
-<br>
+
 
 
 
   <!--Pie chart with-->
-  <h4>How your users are distributed</h4>
 
-    <canvas id="pieChart" width="900" height="200"></canvas>
     <script>
       var ctx = document.getElementById("pieChart").getContext("2d");
       var pieChart = new Chart(ctx, {
@@ -480,7 +603,7 @@
         }
       });
     </script>
-    <br>
+    <br><br>
     <h6>Your remaining Frankly Credit:</h6>
     With Frankly you get your first 100 responses for free, after that you an top up for another 100 responses for just €3,99. Here is how much credit you have used.<br><br>
     <b>Credits used so far:</b><br>
@@ -534,10 +657,10 @@
        {% if posts.page == posts.pages %}disabled{% endif %}">
         &raquo;
     </a>
-  </div>
-  <p class="text-right mt-3">
+  </div><br><br>
+  <!--<p class="text-right mt-3">
    Showing page {{ posts.page }} of {{ posts.pages }}<br>
-  </p>
+  </p> -->
   </div>
   <!-- End of Pagination Links-->
     
@@ -700,9 +823,9 @@
       &raquo;
   </a>
 </div>
-<p class="text-right mt-3">
+<!--<p class="text-right mt-3">
  Showing page {{ posts.page }} of {{ posts.pages }}<br>
-</p>
+</p>-->
 </div>
 <!-- End of Pagination Links-->
 
